Added classes to be updated

--- a/overlay.html
+++ b/overlay.html
@@ -4,5 +4,5 @@
 		<object style="position:absolute;top:70%;" id="intermission" type="image/svg+xml" data="/Themes/Default/intermission.svg"></object>
 	</body>
 	<script src="/modes.js"></script>
-	<script type="module" src="/hockey-overlay.js"></script>
+	<script src="/hockey-overlay.js"></script>
 </html>
