--- a/overlay.html
+++ b/overlay.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<body style="width:1920;height:1080">
-		<object style="position:absolute;top:10%;left:5%" id="Scoreboard" type="image/svg+xml" data="/Themes/Default/scoreboard.svg"></object>
+		<object style="position:absolute;top:65px;left:65px" id="Scoreboard" type="image/svg+xml" data="/Themes/Default/scoreboard.svg"></object>
 		<object style="position:absolute;top:70%;" id="Intermission" type="image/svg+xml" data="/Themes/Default/intermission.svg"></object>
 	</body>
 	<script src="/modes.js"></script>
