Changed values to input based on class and added test graphic

--- a/hockey-scoreboard.html
+++ b/hockey-scoreboard.html
@@ -9,10 +9,12 @@
 			<button class="up" id="btn_clock" onclick="send_event('clock',true)">Start</button>
 		</div>
 		<div class="std" align="center">
+			<button class="up" id="btn_homeGoal" onclick="send_event('homeGoal',true)">Home Goal</button>
 			<button class="up" id="btn_h_shots_up" onclick="send_event('h_shots_up',true)">Home Shots Up</button>
 			<button class="up" id="btn_h_score_up" onclick="send_event('h_score_up',true)">Home Score Up</button>
 			<button class="up" id="btn_a_score_up" onclick="send_event('a_score_up',true)">Away Score Up</button>
 			<button class="up" id="btn_a_shots_up" onclick="send_event('a_shots_up',true)">Away Shots Up</button>
+			<button class="up" id="btn_awayGoal" onclick="send_event('awayGoal',true)">Away Goal</button>
 		</div>
 		<div class="std" align="center">
 			<button class="down" id="btn_h_shots_down" onclick="send_event('h_shots_down',true)">Home Shots Down</button>
