--- a/control-panel.html
+++ b/control-panel.html
@@ -2,6 +2,18 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
 </head>
+	<style>
+	    #frame { width: 1920px; height: 1080px; border: 1px solid black; }
+	    #frame {
+	        -ms-zoom: 0.4;
+	        -moz-transform: scale(0.4);
+	        -moz-transform-origin: 0 0;
+	        -o-transform: scale(0.4);
+	        -o-transform-origin: 0 0;
+	        -webkit-transform: scale(0.4);
+	        -webkit-transform-origin: 0 0;
+	    }
+	</style>
 	<body>
 		<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)">
 			<option>Ice Hockey</option>
@@ -28,7 +40,8 @@
 		<button class="up" id="btn_Commercial" value="false">Commercial</button>
 		<button class="up" id="btn_Full_Screen" value="false">Full Screen</button>
 		<button class="up" id="btn_Player_Info" value="false">Player Info</button>
-
+		<div>
+		</div>
 	</body>
 	<script type="text/javascript">
 
