Fixed control panel buttons

--- a/control-panel.html
+++ b/control-panel.html
@@ -35,17 +35,12 @@
 			<select id="game_select" onchange="send_event('game_switch',document.getElementById('game_select').value)">
 			</select>
 		</div>
-		<button class="up" id="btn_Scoreboard" value="true" style="background:green">Scoreboard</button>
-		<button class="up" id="btn_Intermission" value="false" style="background:red">Intermission</button>
-		<button class="up" id="btn_Commercial" value="false" style="background:red">Commercial</button>
-		<button class="up" id="btn_Full_Screen" value="false" style="background:red">Full Screen</button>
-		<button class="up" id="btn_Player_Info" value="false" style="background:red">Player Info</button>
-		<button class="up" id="btn_Test_Overlay" value="false" style="background:red">Move Overlay</button>
-		<button class="up solo graphic" id="btn_Scoreboard" value="true">Scoreboard</button>
-		<button class="up solo graphic" id="btn_Intermission" value="false">Intermission</button>
-		<button class="up solo graphic" id="btn_Commercial" value="false">Commercial</button>
-		<button class="up solo graphic" id="btn_Full_Screen" value="false">Full Screen</button>
-		<button class="up solo graphic" id="btn_Player_Info" value="false">Player Info</button>
+		<button class="up solo graphic" id="btn_Scoreboard" value="true" style="background:green">Scoreboard</button>
+		<button class="up solo graphic" id="btn_Intermission" value="false" style="background:red">Intermission</button>
+		<button class="up solo graphic" id="btn_Commercial" value="false" style="background:red">Commercial</button>
+		<button class="up solo graphic" id="btn_Full_Screen" value="false" style="background:red">Full Screen</button>
+		<button class="up solo graphic" id="btn_Player_Info" value="false" style="background:red">Player Info</button>
+		<button class="up solo graphic" id="btn_Test_Overlay" value="false" style="background:red">Move Overlay</button>
 		<div>
 		</div>
 	</body>
