--- a/control-panel.html
+++ b/control-panel.html
@@ -1,47 +1,87 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
+	<title>Control Panel</title>
 </head>
-	<style>
-	    #frame { width: 1920px; height: 1080px; border: 1px solid black; }
-	    #frame {
-	        -ms-zoom: 0.4;
-	        -moz-transform: scale(0.4);
-	        -moz-transform-origin: 0 0;
-	        -o-transform: scale(0.4);
-	        -o-transform-origin: 0 0;
-	        -webkit-transform: scale(0.4);
-	        -webkit-transform-origin: 0 0;
-	    }
-	</style>
 	<body>
-		<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)">
-			<option>Ice Hockey</option>
-			<option>Soccer</option>
-			<option>Baseball</option>
-			<option>Football</option>
-		</select>
-
-		<div>
-			<select id="league_select">
-			</select>
-
-			<select id="home_select">
-			</select>
-
-			<select id="away_select">
-			</select>
-
-			<select id="game_select" onchange="send_event('game_switch',document.getElementById('game_select').value)">
-			</select>
+		<div id="header">
+			<h1>Control Panel</h1>
 		</div>
-		<button class="up solo graphic" id="btn_Scoreboard" value="true">Scoreboard</button>
-		<button class="up solo graphic" id="btn_Intermission" value="false">Intermission</button>
-		<button class="up solo graphic" id="btn_Commercial" value="false">Commercial</button>
-		<button class="up solo graphic" id="btn_Full_Screen" value="false">Full Screen</button>
-		<button class="up solo graphic" id="btn_Player_Info" value="false">Player Info</button>
-		<div>
+
+		<div id="main">
+
+			<div id="select">
+
+				<select id="mode_select" onchange="send_event('mode_switch',document.getElementById('mode_select').value)">
+					<option>Sports</option>
+					<option>News</option>
+					<option>Event</option>
+				</select>
+				<select id="sport_select" onchange="send_event('sport_switch',document.getElementById('sport_select	').value)">
+					<option>Ice Hockey</option>
+					<option>Soccer</option>
+					<option>Baseball</option>
+					<option>Football</option>
+				</select>
+				<br>
+
+				<select id="league_select"></select>
+				<select id="home_select"></select>
+				<select id="away_select"></select>
+				<select id="game_select" onchange="send_event('game_switch',document.getElementById('game_select').value)"></select>
+			
+			</div>
+
+			<div class="centered" id="buttons">
+	
+				<button class="up" id="btn_Scoreboard" value="true" onclick="button_animation(this)">Scoreboard</button>
+				<button class="up" id="btn_Intermission" value="false">Intermission</button>
+				<button class="up" id="btn_Commercial" value="false">Commercial</button>
+				<button class="up" id="btn_Full_Screen" value="false">Full Screen</button>
+				<button class="up" id="btn_Player_Info" value="false">Player Info</button>
+				<button class="up" id="btn_Player_Info" value="false">Test</button>
+
+			</div>
+			
+			<!-- categories with checklists, width is dynamic with respect to window size, but not to number of categories -->
+			<!-- 
+				'category' class determines visual style (height, background color, corners)
+				'left/center/right' class determines where it is aligned
+				'section3' class makes sure that it works for 3 sections
+			-->
+			<div class="category left sections3">
+				<h2>Scoreboard Options</h2>
+
+				
+				<div id="hideoverflow">
+    				<div id="outer">
+        				<div id="inner">
+        					<form action="/action_page.php" method="get">
+  							<input type="checkbox" name="test1" value="test1">Animate Goal<br>
+  							<input type="checkbox" name="test2" value="test2" checked="checked">Animate Shots<br>
+  							<input type="checkbox" name="test3" value="test3">Show Shots<br>
+  					
+
+  						</div>
+    				</div>
+				</div>	
+				<input type="submit" value="Submit">
+				</form>
+
+			</div>
+			<div class="category center sections3">
+				<h2>Intermission Options</h2>
+				2
+			</div>
+			<div class="category right sections3">
+				<h2>Commercial Options</h2>
+				3
+			</div>
+
+
 		</div>
+	
 	</body>
 	<script type="text/javascript">
 
@@ -105,29 +145,11 @@
 
 		document.getElementById("btn_Scoreboard").addEventListener("click",function(){
 			button_bool("btn_Scoreboard");
-			if(document.getElementById("btn_Scoreboard").classList.contains("solo")){
-				var a = document.getElementsByClassName("graphic");
-				for (var i=0;i<a.length;i++){
-					if(a[i].id!="btn_Scoreboard"){
-						a[i].value="false";
-						send_event(a[i].id,"false");
-					}
-				}
-			}
 			send_event("btn_Scoreboard",document.getElementById("btn_Scoreboard").value);
 		});
 
 		document.getElementById("btn_Intermission").addEventListener("click",function(){
 			button_bool("btn_Intermission");
-			if(document.getElementById("btn_Intermission").classList.contains("solo")){
-				var a = document.getElementsByClassName("graphic");
-				for (var i=0;i<a.length;i++){
-					if(a[i].id!="btn_Intermission"){
-						a[i].value="false";
-						send_event(a[i].id,"false");
-					}
-				}
-			}
 			send_event("btn_Intermission",document.getElementById("btn_Intermission").value);
 		});
 
@@ -157,6 +179,10 @@
 			})
 		});
 
+		function button_animation(b){
+			b.toggleClass("down");
+		}
+
 		function send_event(button,value){
 			var xhr = new XMLHttpRequest();
 			xhr.open("POST", "/control-panel", true);
@@ -168,28 +194,31 @@
 
 		function httpGetAsync(theUrl, callback){
 		    var xmlHttp = new XMLHttpRequest();
-		    xmlHttp.onreadystatechange = function() {
+		    xmlHttp.onreadystatechange = function() { 
 		        if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
 		            callback(xmlHttp.responseText);
 		    }
-		    xmlHttp.open("GET", theUrl, true); // true for asynchronous
+		    xmlHttp.open("GET", theUrl, true); // true for asynchronous 
 		    xmlHttp.send(null);
 		}
 
 		function button_bool(btn){
 			if(document.getElementById(btn).value=="true"){
 				document.getElementById(btn).value="false";
-				document.getElementById(btn).style.backgroundColor="red";
+				//document.getElementById(btn)..classList.remove("up");
+				//document.getElementById(btn).classList.add("down");
+
 			}
 			else{
 				document.getElementById(btn).value="true";
-				document.getElementById(btn).style.backgroundColor="green";
+				//document.getElementById(btn).classList.add("down");
+				//document.getElementById(btn).classList.remove("up");
 			}
 
 			console.log(document.getElementById(btn).value);
 		}
 
-		function load_league_data(ti) {
+		function load_league_data(ti) {   
 
 		    var xobj = new XMLHttpRequest();
 		        xobj.overrideMimeType("application/json");
@@ -221,7 +250,7 @@
 					load_team_data();
 		        }
 		    };
-		    xobj.send(null);
+		    xobj.send(null);  
 		}
 
 		function load_team_data(){
@@ -247,19 +276,26 @@
 				option.text = item["Full Name"];
 				x.add(option);
 			});
-			change_team();
 		}
 
 		function change_team(){
 			var home = teams.Teams.filter(x => x["League"] == document.getElementById("league_select").value && x["Full Name"] == document.getElementById("home_select").value);
 			var away = teams.Teams.filter(x => x["League"] == document.getElementById("league_select").value && x["Full Name"] == document.getElementById("away_select").value);
+			//console.log(teams);
+			//console.log(away[0]);
+
 
 			Object.assign(home_info,home[0]);
 			Object.assign(away_info,away[0]);
-
-			home_info["Logo1"] = '/Teams/'.concat(home_info["League"],"/",home_info["Location"],"/logo1.png");
-			away_info["Logo1"] = '/Teams/'.concat(away_info["League"],"/",away_info["Location"],"/logo1.png");
-
+			//console.log(away_info);
+/*
+			filtered.forEach(function(item){
+				var x = document.getElementById("home_select");
+				var option = document.createElement("option");
+				option.text = item["Full Name"];
+				x.add(option);
+			});
+			*/
 			send_event('home_change',home_info);
 			send_event('away_change',away_info);
 		}
