--- a/hockey-scoreboard.html
+++ b/hockey-scoreboard.html
@@ -1,128 +1,334 @@
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	
 	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
 	<title>&#x2730;Hockey Scoreboard</title>
 </head>
-	<body>
-		<div id="header">
-			<h1>Control Panel</h1>
-		</div>
-		<div>
-
-		<select id="game_select">
-		</select><br>
-
-			<div id="top">
-				<div class="left sections3">
-					<h3>Home</h3>
-					<div class="shots half">
-						<div class="big">22</div>
-						Shots<br/>
-						<button class="up fill" id="btn_h_shots_up" onclick="send_event('h_shots_up',true)">Home Shots Up</button>
-						<button class="down fill" id="btn_h_shots_down" onclick="send_event('h_shots_down',true)">Home Shots Down</button>
-					</div>
-					<div class="score half">
-						<div class="big">3</div>
-						Score<br/>
-						<button class="up fill" id="btn_h_score_up" onclick="send_event('h_score_up',true)">Home Score Up</button>
-						<button class="down fill" id="btn_h_score_down" onclick="send_event('h_score_down',true)">Home Score Down</button>
-					</div>
-				</div>
-
-				<div class="center sections3">
-					<div id="timer">
-
-						<div id="min1" class="time">
-							<button class="plus"></button>
-							1
-							<button class="minus"></button>
-						</div>
-						<div id="min2" class="time">
-							<button class="plus"></button>
-							8
-							<button class="minus"></button>
-						</div>
-						<div class="time">:</div>
-						<div id="sec1" class="time">
-							<button class="plus"></button>
-							2
-							<button class="minus"></button>
-						</div>
-						<div id="sec2"class="time">
-							<button class="plus"></button>
-							4
-							<button class="minus"></button>
-						</div>
-						<div class="time">.</div>
-						<div id="ms"class="time">
-							<button class="plus"></button>
-							5
-							<button class="minus"></button>
-						</div>
-						
-					</div>
-
-					<div id="btn_clock_div"><button class="up fill" onclick="send_event('clock',true)">Start</button></div>
-				</div>
-
-				<div class="right sections3">
-					<h3>Away</h3>
-					<div class="shots half">
-						<div class="big">2</div>
-						Shots<br/>
-						<button class="up fill" id="btn_a_score_up" onclick="send_event('a_score_up',true)">Away Score Up</button>
-						<button class="down fill" id="btn_a_score_down" onclick="send_event('a_score_down',true)">Away Score Down</button>
-					</div>
-					<div class="score half">
-						<div class="big">15</div>
-						Score<br/>
-						<button class="up fill" id="btn_a_shots_up" onclick="send_event('a_shots_up',true)">Away Shots Up</button>
-						<button class="down fill" id="btn_a_shots_down" onclick="send_event('a_shots_down',true)">Away Shots Down</button>
-					</div>
-				</div>
-
-			</div>
-
-			<div id="middle">test</div>
-			<div id="bottom">
-
-
-				<div class="std" align="center">
-					<button class="up" id="btn_add_h_pen" onclick="send_event('add_h_pen',JSON.stringify({
-						'dur':1,'num':11,'infr':'Roughing'
-					}))">Add Home Penalty</button>
-					<button class="up" id="btn_period_up" onclick="send_event('period_up',true)">Period Up</button>
-					<button class="up" id="btn_add_a_pen" onclick="send_event('add_a_pen',JSON.stringify({
-						'dur':1,'num':2,'infr':'Roughing'
-					}))">Add Away Penalty</button>
-				</div>
-				<div class="std" align="center">
-					<button class="down" id="btn_period_down" onclick="send_event('period_down',true)">Period Down</button>
-				</div>
-			</div>
-
+	<body class="fullscreen"><div class="container fullscreen">
+		<div id="header_1" class="row inherit_w"><div class="column inherit_w inherit_h">
+			<h1>Hockey Scoreboard</h1>
+		</div></div>
 		
-			<!--div id="middle">test</div>
-			<div id="bottom">
+<!-- TOP SECTION START -->
+		<div id="top_1" class="row inherit_w">
+
+	<!-- HOME STATS START ================================= -->
+			<div id="home_stats" class="column inherit_h stats_1">
+				<div class="row inherit_w stats_title_1"><div class="column inherit_w inherit_h">
+					<h3 class="stats_title_text_1">Home</h3>
+				</div></div>
+				<div class="row inherit_w stats_score_1">
+					<div class="column inherit_h stats_section_1 margin_right_1">
+						<p class="inherit_h stats_score_num">22</p>
+						<p class="inherit_h stats_score_text">Shots</p>
+					</div>
+					<div class="column inherit_h stats_section_1">
+						<p class="inherit_h stats_score_num">3</p>
+						<p class="inherit_h stats_score_text">Score</p>
+					</div>
+				</div>
+				<div class="row inherit_w stats_button_1">
+					<div class="column inherit_h stats_button_section margin_right_1">
+						<div class="row inherit_w stats_button_section_v"><div class="column inherit_w inherit_h">
+							<button id="home_shots_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div></div>
+						<div class="row inherit_w stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
+							<button id="home_shots_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div></div>
+					</div>
+					<div class="column inherit_h stats_button_section">
+						<div class="row inherit_w  stats_button_section_v"><div class="column inherit_w inherit_h">
+							<button id="home_score_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div></div>
+						<div class="row inherit_w  stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
+							<button id="home_score_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div></div>
+					</div>
+				</div>
+
+			</div>
+	<!-- HOME STATS END =================================== -->
 
 
-				<div class="std" align="center">
-					<button class="up" id="btn_add_h_pen" onclick="send_event('add_h_pen',JSON.stringify({
-						'dur':1,'num':11,'infr':'Roughing'
-					}))">Add Home Penalty</button>
-					<button class="up" id="btn_period_up" onclick="send_event('period_up',true)">Period Up</button>
-					<button class="up" id="btn_add_a_pen" onclick="send_event('add_a_pen',JSON.stringify({
-						'dur':1,'num':2,'infr':'Roughing'
-					}))">Add Away Penalty</button>
+	<!-- TIMER SECTION START ================================ -->
+			<div class="column inherit_h timer_1">
+				<div class="row inherit_w timer_clock"><div class="col inherit_w inherit_h">
+
+		<!-- Timer Time Increment -->			
+					<div class="row inherit_w timer_btn_row">
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--m1+ -->		<button id="timer_m1_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--m2+ -->		<button id="timer_m2_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1"><!-- 
+							<button class="inherit_w inherit_h btn_plus">+</button> -->
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--s1+ -->		<button id="timer_s1_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--s2+ -->		<button id="timer_s2_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1"><!-- 
+							<button class="inherit_w inherit_h btn_plus">+</button> -->
+						</div>
+						<div class="col inherit_h timer_div_7">
+			<!--ms+ -->		<button id="timer_ms_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div>
+					</div>
+
+
+		<!-- Timer Times -->	
+					<div class="row inherit_w timer_num_row">
+						<div id="timer_m1_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+			<!--m1# -->		1
+						</div>
+						<div id="timer_m2_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+			<!--m2# -->		8
+						</div>
+						<div class="col inherit_h timer_div_7 timer_num margin_right_1">
+							:
+						</div>
+						<div id="timer_s1_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+			<!--s1# -->		2
+						</div>
+						<div id="timer_s2_num" class="col inherit_h timer_div_7 timer_num margin_right_1">
+			<!--s2# -->		4
+						</div>
+						<div class="col inherit_h timer_div_7 timer_num margin_right_1">
+							.
+						</div>
+						<div id="timer_ms_num" class="col inherit_h timer_div_7 timer_num">
+			<!--ms- -->		5
+						</div>
+					</div>
+
+
+		<!-- Timer Time Decrement -->
+					<div class="row inherit_w timer_btn_row">
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--m1- -->		<button id="timer_m1_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--m2- -->		<button id="timer_m2_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1"><!-- 
+							<button class="inherit_w inherit_h btn_minus">-</button> -->
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--s1- -->		<button id="timer_s1_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1">
+			<!--s2- -->		<button id="timer_s2_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+						<div class="col inherit_h timer_div_7 margin_right_1"><!-- 
+							<button class="inherit_w inherit_h btn_minus">-</button> -->
+						</div>
+						<div class="col inherit_h timer_div_7">
+			<!--ms- -->		<button id="timer_ms_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+					</div>
+				</div></div>
+		<!-- Timer Start/Stop Button -->
+				<div class="row inherit_w timer_clock_btn margin_top_2">
+					<button id="timer_btn" class="inherit_w inherit_h">Clock Start/Stop</button>
 				</div>
-				<div class="std" align="center">
-					<button class="down" id="btn_period_down" onclick="send_event('period_down',true)">Period Down</button>
+			</div>
+	<!-- TIMER SECTION END ================================== -->
+
+
+	<!-- AWAY STATS START =================================== -->
+			<div id="away_stats" class="column inherit_h stats_1">
+				<div class="row inherit_w stats_title_1"><div class="column inherit_w inherit_h">
+					<h3 class="stats_title_text_1">Away</h3>
+				</div></div>
+				<div class="row inherit_w stats_score_1">
+					<div class="column inherit_h stats_section_1 margin_right_1">
+						<p class="inherit_h stats_score_num">2</p>
+						<p class="inherit_h stats_score_text">Score</p>
+					</div>
+					<div class="column inherit_h stats_section_1">
+						<p class="inherit_h stats_score_num">15</p>
+						<p class="inherit_h stats_score_text">Shots</p>
+					</div>
 				</div>
-			</div-->
+				<div class="row inherit_w stats_button_1">
+					<div class="column inherit_h stats_button_section margin_right_1">
+						<div class="row inherit_w stats_button_section_v"><div class="column inherit_w inherit_h">
+							<button id="away_score_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div></div>
+						<div class="row inherit_w stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
+							<button id="away_score_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div></div>
+					</div>
+					<div class="column inherit_h stats_button_section">
+						<div class="row inherit_w  stats_button_section_v"><div class="column inherit_w inherit_h">
+							<button id="away_shots_button_plus" class="inherit_w inherit_h btn_plus">+</button>
+						</div></div>
+						<div class="row inherit_w  stats_button_section_v margin_top_1"><div class="column inherit_w inherit_h">
+							<button id="away_shots_button_minus" class="inherit_w inherit_h btn_minus">-</button>
+						</div></div>
+					</div>
+				</div>
+
+			</div>
+	<!-- AWAY STATS END =================================== -->
 		</div>
-</body>
-	</body>
+<!-- TOP SECTION END -->
+
+
+
+
+<!-- PENALTY SECTION START -->
+		<div id="mid_1" class="row inherit_w">
+
+<!-- HOME PENALTIES [start] ================================= -->
+			<div class="col inherit_h penalty_section margin_sides_2">
+	<!-- Home Penalty Bar ------------------------------------ -->
+				<div class="row inherit_w penalty_add_bar">
+					<div class="col inherit_h penalty_col">
+						<div class="dropdown inherit_w inherit_h">Number</div>
+					</div>
+					<div class="col inherit_h penalty_col">
+						<div class="dropdown inherit_w inherit_h">Penalty Length</div>
+					</div>
+					<div class="col inherit_h penalty_col">
+						<div class="dropdown inherit_w inherit_h">Infraction</div>
+					</div>
+					<div class="col inherit_h penalty_btn">
+						<button class="inherit_w inherit_h btn_plus">+</button>
+					</div>
+				</div>
+
+	<!-- Home Penalty List ----------------------------------- -->
+				<div class="row inherit_w penalty_list margin_top_1"><div class="col inherit_w inherit_h">
+		<!-- HOME INFRACTION 1 --> <!-- these will be added dynamically -->
+					<div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">
+							2
+						</div>
+						<div class="col inherit_h penalty_col">
+							1:15
+						</div>
+						<div class="col inherit_h penalty_col">
+							Roughing
+						</div>
+						<div class="col inherit_h penalty_btn">
+							<button class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+					</div>
+					<!-- end home infraction 1 -->
+
+		<!-- HOME INFRACTION 2 -->
+					<div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">
+							11
+						</div>
+						<div class="col inherit_h penalty_col">
+							0:41
+						</div>
+						<div class="col inherit_h penalty_col">
+							Tripping
+						</div>
+						<div class="col inherit_h penalty_btn">
+							<button class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+					</div>
+					<!-- end home infraction 2 -->
+				</div></div>
+			</div>
+<!-- HOME PENALTIES [end] =============================== -->
+
+
+
+<!-- AWAY PENALTIES [start] ================================= -->
+			<div class="col inherit_h penalty_section margin_sides_2">
+	<!-- Away Penalty Bar ------------------------------------ -->
+				<div class="row inherit_w penalty_add_bar">
+					<div class="col inherit_h penalty_col">
+						<div class="dropdown inherit_w inherit_h">Number</div>
+					</div>
+					<div class="col inherit_h penalty_col">
+						<div class="dropdown inherit_w inherit_h">Penalty Length</div>
+					</div>
+					<div class="col inherit_h penalty_col">
+						<div class="dropdown inherit_w inherit_h">Infraction</div>
+					</div>
+					<div class="col inherit_h penalty_btn">
+						<button class="inherit_w inherit_h btn_plus">+</button>
+					</div>
+				</div>
+
+	<!-- Away Penalty List ----------------------------------- -->
+				<div class="row inherit_w penalty_list margin_top_1"><div class="col inherit_w inherit_h">
+		<!-- AWAY INFRACTION 1 --> <!-- these will be added dynamically -->
+					<div class="row inherit_w penalty_list_item">
+						<div class="col inherit_h penalty_col">
+							2
+						</div>
+						<div class="col inherit_h penalty_col">
+							1:15
+						</div>
+						<div class="col inherit_h penalty_col">
+							Roughing
+						</div>
+						<div class="col inherit_h penalty_btn">
+							<button class="inherit_w inherit_h btn_minus">-</button>
+						</div>
+					</div>
+					<!-- end away infraction 1 -->
+
+				</div></div>
+			</div>
+<!-- AWAY PENALTIES [end] =============================== -->
+		</div>
+<!-- PENALTY SECTION END -->
+
+
+
+<!-- BUTTONS SECTION START -->
+		<div id="bot_1" class="row inherit_w">
+			<div class="col inherit_h end_btn_sides">
+				<button id="home_timeout" class="inherit_w inherit_h">Timeout</button>
+			</div>
+			<div class="col inherit_h end_btn_sides">
+				<button id="home_empty_net" class="inherit_w inherit_h">Empty Net</button>
+			</div>
+			<div class="col inherit_h end_btn_sides">
+				<button id="home_challenge" class="inherit_w inherit_h">Challenge</button>
+			</div>
+
+			<div class="col inherit_h end_btn_mid margin_sides_1">
+				<div class="row inherit_w end_btn_mid_v"><div class="col inherit_w inherit_h">
+					<button id="period_up" class="inherit_w inherit_h btn_plus">Period Up</button>
+				</div></div>
+				<div class="row inherit_w end_btn_mid_v margin_top_1"><div class="col inherit_w inherit_h">
+					<button id="period_down" class="inherit_w inherit_h btn_minus">Period Down</button>
+				</div></div>
+
+			</div>
+
+			<div class="col inherit_h end_btn_sides">
+				<button id="away_challenge" class="inherit_w inherit_h">Challenge</button>
+			</div>
+			<div class="col inherit_h end_btn_sides">
+				<button id="away_empty_net" class="inherit_w inherit_h">Empty Net</button>
+			</div>
+			<div class="col inherit_h end_btn_sides">
+				<button id="away_timeout" class="inherit_w inherit_h">Timeout</button>
+			</div>
+
+		</div>
+<!-- BUTTONS SECTION END -->
+
+
+
+
+	</div></body>
 	<script type="text/javascript">
 
 		/*
