Got the overlay working to an extent

--- a/public/html/overlay.html
+++ b/public/html/overlay.html
@@ -3,6 +3,7 @@
 		<object style="position:absolute;top:10%;left:5%" id="Scoreboard" type="image/svg+xml" data="/Themes/Default/scoreboard.svg"></object>
 		<object style="position:absolute;top:70%;" id="Intermission" type="image/svg+xml" data="/Themes/Default/intermission.svg"></object>
 	</body>
-	<script src="/modes.js"></script>
-	<script src="/hockey-overlay.js"></script>
+	<script type="text/javascript" src="/js/classes.js"></script>
+	<script type="text/javascript" src="/js/events.js"></script>
+	<script type="text/javascript" src="/js/hockey-scoreboard-overlay.js"></script>
 </html>
