Added control panel and included a preview of overlay in control panel (which is now possible because of the switch away from SSEs)

--- a/public/html/hockey-scoreboard.html
+++ b/public/html/hockey-scoreboard.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
 	<title>&#x2730;Hockey Scoreboard</title>
 </head>
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<body class="fullscreen"><div class="container fullscreen">
 		<div id="header_1" class="row inherit_w"><div class="column inherit_w inherit_h">
 			<h1>Hockey Scoreboard</h1><select id="game_select" style="float:right"></select>
