--- a/public/html/hockey-scoreboard.html
+++ b/public/html/hockey-scoreboard.html
@@ -350,5 +350,6 @@
 	</div></body>
 	<script type="text/javascript" src="/js/events.js"></script>
 	<script type="text/javascript" src="/js/classes.js"></script>
+	<script type="text/javascript" src="/js/client.js"></script>
 	<script type="text/javascript" src="/js/hockey-scoreboard-control.js"></script>
 </html>
