--- a/public/html/overlay.html
+++ b/public/html/overlay.html
@@ -5,5 +5,6 @@
 	</body>
 	<script type="text/javascript" src="/js/classes.js"></script>
 	<script type="text/javascript" src="/js/events.js"></script>
+	<script type="text/javascript" src="/js/client.js"></script>
 	<script type="text/javascript" src="/js/hockey-scoreboard-overlay.js"></script>
 </html>
