Added custom colour options for team selection and began process of implementing logo selection. Also added a neat little shadow in the default intermission graphic.

--- a/public/html/team-settings.html
+++ b/public/html/team-settings.html
@@ -1,8 +1,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	
-	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
+	<link rel="stylesheet" type="text/css" href="/css/team-settings.css">	<link rel="stylesheet" type="text/css" href="/css/scoreboard.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap" rel="stylesheet">
 	<title>Team Settings</title>
 </head>
@@ -24,6 +23,13 @@
 				</select></br>
 				<br>Team: <select id="home_team_select">
 				</select></br>
+				<br>Color 1: <input class="home_color1 home_color" type="color" value="#ff0000" id="home_color1"></input></br>
+				<br>Color 2: <input class="home_color2 home_color" type="color" value="#ff0000" id="home_color2"></input></br>
+				<br>Color 3: <input class="home_color3 home_color" type="color" value="#ff0000" id="home_color3"></input></br>
+				<br>Color 4: <input class="home_color4 home_color" type="color" value="#ff0000" id="home_color4"></input></br>
+				<br>Logo 1: <input type="file" id="home_logo1" class="home_logo"></input><select class="home_logo"></select><img id="home_logo1_preview" class="home_logo1 logo" src="/Teams/International/Canada/logo1.png"/></br>
+				<br>Logo 2: <input type="file" id="home_logo2" class="home_logo"></input><select class="home_logo"></select><img id="home_logo2_preview" class="home_logo2 logo" src="/Teams/International/Canada/logo2.png"/></br>
+				<br>Logo 3: <input type="file" id="home_logo3"class="home_logo" ></input><select class="home_logo"></select><img id="home_logo3_preview" class="home_logo3 logo" src="/Teams/International/Canada/logo3.png"/></br>
 
 
 			</div>
@@ -39,6 +45,13 @@
 				</select></br>
 				<br>Team: <select id="away_team_select">
 				</select></br>
+				<br>Color 1: <input class="away_color1 away_color" type="color" value="#ff0000" id="away_color1"></input></br>
+				<br>Color 2: <input class="away_color2 away_color" type="color" value="#ff0000" id="away_color2"></input></br>
+				<br>Color 3: <input class="away_color3 away_color" type="color" value="#ff0000" id="away_color3"></input></br>
+				<br>Color 4: <input class="away_color4 away_color" type="color" value="#ff0000" id="away_color4"></input></br>
+				<br>Logo 1: <input type="file" id="away_logo1" class="away_logo"></input><select class="away_logo"></select><img id="away_logo1_preview" class="away_logo1 logo" src="/Teams/International/Canada/logo1.png"/></br>
+				<br>Logo 2: <input type="file" id="away_logo2" class="away_logo"></input><select class="away_logo"></select><img id="away_logo2_preview" class="away_logo2 logo" src="/Teams/International/Canada/logo2.png"/></br>
+				<br>Logo 3: <input type="file" id="away_logo3"class="away_logo" ></input><select class="away_logo"></select><img id="away_logo3_preview" class="away_logo3 logo" src="/Teams/International/Canada/logo3.png"/></br>
 
 			</div>
 	<!-- AWAY INFO END =================================== -->
