Began adding support for moving graphics using a previewer. Also added support for custom font serving and loading

--- a/public/html/control-panel.html
+++ b/public/html/control-panel.html
@@ -81,7 +81,7 @@
 
 
 		</div>
-	 <iframe src="/html/overlay.html" style="
+	 <iframe src="/html/overlay-preview.html" style="
 		height:1080px;width:1920px;
 		-ms-zoom: 0.5;
 	    -moz-transform: scale(0.5);
